(next release) on (date of next release)
     0.50        March 27, 2000
24.03.00 VZ: startup tips
23.03.00 KB: Finished folder creation wizard. Fixed inheritance of FolderView column sizes.
             Fixed some dialog sizes. Filters dialog behaves slightly better and uses folder
             browse button. Fixed error message appearance in PalmOS.cpp.
22.03.00 KB: Filters config dialog extended. BBDB ADB supports read-only status.
             Folder creation wizard work.
14.03.00 VZ: added changing folder colours depending on whether they have
             new/recent messages
08.03.00 VZ: browsing IMAP/NNTP servers and subscribing to them works
             GUI support for deleting folders physically and not only removing
03.03.00 VZ: all expanded branches of the folder tree are now saved/restored
03.03.00 VZ: subscription dialog starts to work
23.02.00 KB: IMAP code fixes plugging possible memory corruption, message editor fixes.
             Fixed empty names for BBDB and PalmOS adressbooks.
05.02.00 KB: Folderlisting now uses colour highlighting.
             Imap4.7a integrated and patches simplified.
             POP3 headers cache patch added
             SSL support added, using OpenSSL
27.01.00 KB: Filters dialog changes, creates working (?) Filter rules now
             hidden folder flag added to config dialog,
             NewMail dialog changes
             added static MailFolder::CreateFolder()
16.01.00 VZ: added right click popup menu to the ADB editor
             added a dialog to reenable previously disabled msg boxes
03.12.99 KB: MIME type prompt added to compose view. Started adding filters dialog.
             Message threading added. Fixed dialup handling in wxGTK.
01.12.99 VZ: added support for hidden folder flag
29.11.99 KB: Filters and application of filter rules added, next_unread button added.
             Mail collection should now work more intelligently for dialup situations.