@@ -1,6 +1,7 @@
 (next release) on (date of next release)
      0.50        March 27, 2000
 24.03.00 VZ: startup tips
+             creating MH folders from subfolders dialogs works
 23.03.00 KB: Finished folder creation wizard. Fixed inheritance of FolderView column sizes.
              Fixed some dialog sizes. Filters dialog behaves slightly better and uses folder
              browse button. Fixed error message appearance in PalmOS.cpp.
